<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".CategorySelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnCategoryBack"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="center"
            android:src="@drawable/ic_keyboard_backspace_white_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/categoria"
            android:textAlignment="center"
            android:layout_marginEnd="64dp"
            android:textColor="@color/colorWhite"
            android:textSize="26sp" />

    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llDivertido"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_background"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/divertido"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/desc_divertido"
                        android:textColor="@color/colorKindaBlack"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLeve"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_background"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/de_leve"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/desc_de_leve"
                        android:textColor="@color/colorKindaBlack"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llHot"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_background"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/hmm"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/desc_hmmm"
                        android:textColor="@color/colorKindaBlack"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llHard"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_background"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/daquele_jeito"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/desc_daquele_jeito"
                        android:textColor="@color/colorKindaBlack"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llExtreme"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_background"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/extremo"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/desc_extremo"
                        android:textColor="@color/colorKindaBlack"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>