<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".coupleNameActivity"
    android:background="@color/colorBlack">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btnCoupleBack"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="center"
            android:src="@drawable/ic_keyboard_backspace_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/casal"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/btnCoupleDone"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="center"
            android:src="@drawable/ic_check_white_24dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/llParceirx1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/rounded_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/parceirx_1"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/colorKindaBlack"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/txtParceirx1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="seu nome"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/colorBlack"
                android:textSize="26sp"
                android:imeOptions="actionGo"
                android:nextFocusForward="@id/txtParceirx2"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llParceirx2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/rounded_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/parceirx_2"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/colorKindaBlack"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/txtParceirx2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="nome dx mozão"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/colorBlack"
                android:textSize="26sp"
                android:background="@android:color/transparent"
                android:imeOptions="actionDone"
                android:nextFocusDown="@id/btnSelectCategory"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSelectCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_alignParentBottom="true"
                    android:text="@string/bora"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>