<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsNameActivity"
    android:orientation="vertical"
    >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnFriendsBack"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="center"
                android:src="@drawable/ic_keyboard_backspace_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/amigos"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:textColor="@color/colorBlack"
                android:textSize="26sp" />

            <ImageButton
                android:id="@+id/btnFriendsDone"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="center"
                android:src="@drawable/ic_check_black_24dp" />

        </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nome_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/nome_aqui"
                    android:fontFamily="@font/raleway_bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:elevation="3dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_weight="0.1"
                    android:padding="16dp"/>

            </LinearLayout>

                <Button
                    android:id="@+id/btnAddPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/tem_mais_um"
                    android:drawableStart="@drawable/ic_add_black_36dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center_horizontal"
                    />


        </LinearLayout>

    </ScrollView>

</LinearLayout>